--- a/cap_1/introducao.ipynb
+++ b/cap_1/introducao.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,12 +38,12 @@
     "    (0, 1), (0, 2), (1, 2), (1, 3), (2, 3), (3, 4),\n",
     "    (4, 5), (5, 6), (5, 7), (6, 8), (7, 8), (8, 9)\n",
     "\n",
-    "]"
+    "]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,19 +52,20 @@
     "    \n",
     "    amizades[i].append(j)\n",
     "\n",
-    "    amizades[j].append(i)"
+    "    amizades[j].append(i)\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "24\n"
+      "24 10 2.4\n"
      ]
     }
    ],
@@ -81,7 +82,26 @@
     "\n",
     "conexoes_totais = sum(numero_de_amigos(usuario) for usuario in usuarios)\n",
     "\n",
-    "print(conexoes_totais)\n"
+    "numero_de_usuarios = len(usuarios)\n",
+    "\n",
+    "media_de_conexoes = conexoes_totais / numero_de_usuarios\n",
+    "\n",
+    "print(conexoes_totais, numero_de_usuarios, media_de_conexoes)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numero_amigos_por_id = [\n",
+    "    \n",
+    "    (usuario[\"id\"], numero_de_amigos(usuario)) for usuario in usuarios\n",
+    "    \n",
+    "]\n",
+    "\n",
+    "numero_amigos_por_id.sort(key = lambda id_amigos: id_amigos[1], reverse = True)"
    ]
   }
  ],
