--- a/cap_1/introducao.ipynb
+++ b/cap_1/introducao.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,69 @@
     "    \n",
     "]\n",
     "\n",
-    "numero_amigos_por_id.sort(key = lambda id_amigos: id_amigos[1], reverse = True)"
+    "numero_amigos_por_id.sort(key = lambda id_amigos: id_amigos[1], reverse = True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 3, 0, 1, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def amigo_de_amigo_ids(usuario):\n",
+    "\n",
+    "    return [amigo_de_amigo_id \n",
+    "            \n",
+    "            for id_amigos in amizades[usuario[\"id\"]]\n",
+    "\n",
+    "            for amigo_de_amigo_id in amizades[id_amigos]\n",
+    "            \n",
+    "]\n",
+    "\n",
+    "print(amigo_de_amigo_ids(usuarios[0]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({0: 2, 5: 1})\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "\n",
+    "def amigos_de_amigos(usuario):\n",
+    "\n",
+    "    id_usuario = usuario[\"id\"]\n",
+    "\n",
+    "    return Counter(\n",
+    "\n",
+    "        amigo_de_amigo_id \n",
+    "\n",
+    "        for id_amigos in amizades[id_usuario]\n",
+    "\n",
+    "            for amigo_de_amigo_id in amizades[id_amigos]\n",
+    "            \n",
+    "                if amigo_de_amigo_id != id_usuario and amigo_de_amigo_id not in amizades[id_usuario]\n",
+    "\n",
+    "    )\n",
+    "\n",
+    "print(amigos_de_amigos(usuarios[3]))"
    ]
   }
  ],
