--- a/cap_1/introducao.ipynb
+++ b/cap_1/introducao.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -164,6 +164,32 @@
     "    )\n",
     "\n",
     "print(amigos_de_amigos(usuarios[3]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interesses = [\n",
+    "\n",
+    "    (0, \"Hadoop\"), (0, \"Big Data\"), (0, \"HBase\"), (0, \"Java\"),\n",
+    "    (0, \"Spark\"), (0, \"Storm\"), (0, \"Cassandra\"),\n",
+    "    (1, \"NoSQL\"), (1, \"MongoDB\"), (1, \"Cassandra\"), (1, \"HBase\"),\n",
+    "    (1, \"Postgres\"), (2, \"Python\"), (2, \"scikit-learn\"), (2, \"scipy\"),\n",
+    "    (2, \"numpy\"), (2, \"statsmodels\"), (2, \"pandas\"), (3, \"R\"), (3, \"Python\"),\n",
+    "    (3, \"statistics\"), (3, \"regression\"), (3, \"probability\"),\n",
+    "    (4, \"machine learning\"), (4, \"regression\"), (4, \"decision trees\"),\n",
+    "    (4, \"libsvm\"), (5, \"Python\"), (5, \"R\"), (5, \"Java\"), (5, \"C++\"),\n",
+    "    (5, \"Haskell\"), (5, \"programming languages\"), (6, \"statistics\"),\n",
+    "    (6, \"probability\"), (6, \"mathematics\"), (6, \"theory\"),\n",
+    "    (7, \"machine learning\"), (7, \"scikit-learn\"), (7, \"Mahout\"),\n",
+    "    (7, \"neural networks\"), (8, \"neural networks\"), (8, \"deep learning\"),\n",
+    "    (8, \"Big Data\"), (8, \"artificial intelligence\"), (9, \"Hadoop\"),\n",
+    "    (9, \"Java\"), (9, \"MapReduce\"), (9, \"Big Data\")\n",
+    "    \n",
+    "]\n"
    ]
   }
  ],
