--- a/cap_1/introducao.ipynb
+++ b/cap_1/introducao.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -167,8 +167,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### E se tentarmos encontrar os cientistas de dados com os mesmos interesses?"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,6 +198,100 @@
     "    \n",
     "]\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def mesmos_interesses (target_interesse):\n",
+    "\n",
+    "    \"\"\"Encontre os ids dos usuários com o mesmo interesse\"\"\"\n",
+    "\n",
+    "    return [id_usuario for id_usuario, interesse_usuario in interesses\n",
+    "            if interesse_usuario == target_interesse]\n",
+    "\n",
+    "print(mesmos_interesses(\"Big Data\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### A maneira acima até consegue satisfazer a comanda de \"encontrar os cientistas de dados com os mesmos interesses\", mas o fato de ela ter que examinar a lista inteira toda vez que for executada não é muito performático. Então para melhorar esse quesito podemos construir um índice de interesses dos usuários."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import defaultdict\n",
+    "\n",
+    "ids_usuario_por_interesse = defaultdict(list)\n",
+    "\n",
+    "for id_usuario, interesse in interesses:\n",
+    "\n",
+    "    ids_usuario_por_interesse[interesse].append(id_usuario)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import defaultdict\n",
+    "\n",
+    "interesses_por_id_usuario = defaultdict(list)\n",
+    "\n",
+    "for id_usuario, interesse in interesses:\n",
+    "\n",
+    "    interesses_por_id_usuario[id_usuario].append(interesse)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({3: 2, 2: 1, 0: 1, 9: 1})\n"
+     ]
+    }
+   ],
+   "source": [
+    "def interesse_em_comum(usuario):\n",
+    "\n",
+    "    return Counter(\n",
+    "        id_usuario_interessado\n",
+    "        for interesse in interesses_por_id_usuario[usuario[\"id\"]]\n",
+    "            for id_usuario_interessado in ids_usuario_por_interesse[interesse]\n",
+    "                if id_usuario_interessado != usuario[\"id\"]\n",
+    "    )\n",
+    "\n",
+    "print(interesse_em_comum(usuarios[5]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
