--- a/cap_1/introducao.ipynb
+++ b/cap_1/introducao.ipynb
@@ -287,6 +287,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Vamos imaginar uma situação hipotética onde nos é oferecido um conjunto de dados anônimos contendo o `salary` (salário de cada usuário, em doláres, anual) e o `tenure` (a experiência como cientista de dados, em anos):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "salario_e_exp = [(83000, 8.7), (88000, 8.1),\n",
+    "                (48000, 0.7), (76000, 6),\n",
+    "                (69000, 6.5), (76000, 7.5),\n",
+    "                (60000, 2.5), (83000, 10),\n",
+    "                (48000, 1.9), (63000, 4.2)]\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
