--- a/cap_1/introducao.ipynb
+++ b/cap_1/introducao.ipynb
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -295,11 +295,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "salario_e_exp = [(83000, 8.7), (88000, 8.1),\n",
+    "salarios_e_exps = [(83000, 8.7), (88000, 8.1),\n",
     "                (48000, 0.7), (76000, 6),\n",
     "                (69000, 6.5), (76000, 7.5),\n",
     "                (60000, 2.5), (83000, 10),\n",
@@ -308,10 +308,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "defaultdict(<class 'list'>, {8.7: [83000], 8.1: [88000], 0.7: [48000], 6: [76000], 6.5: [69000], 7.5: [76000], 2.5: [60000], 10: [83000], 1.9: [48000], 4.2: [63000]})\n"
+     ]
+    }
+   ],
+   "source": [
+    "salario_por_exp = defaultdict(list)\n",
+    "\n",
+    "for salario, exp in salarios_e_exps:\n",
+    "    salario_por_exp[exp].append(salario)\n",
+    "\n",
+    "print(salario_por_exp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{8.7: 83000.0, 8.1: 88000.0, 0.7: 48000.0, 6: 76000.0, 6.5: 69000.0, 7.5: 76000.0, 2.5: 60000.0, 10: 83000.0, 1.9: 48000.0, 4.2: 63000.0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "media_salario_por_exp = {\n",
+    "\n",
+    " exp : sum(salarios) / len(salarios)\n",
+    "\n",
+    " for exp, salarios in salario_por_exp.items()\n",
+    "\n",
+    "}\n",
+    "print(media_salario_por_exp)\n"
+   ]
   }
  ],
  "metadata": {
