Finalizando a introduca e  iniciando o cap 2

--- a/cap_1/introducao.ipynb
+++ b/cap_1/introducao.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,15 +308,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "defaultdict(<class 'list'>, {8.7: [83000], 8.1: [88000], 0.7: [48000], 6: [76000], 6.5: [69000], 7.5: [76000], 2.5: [60000], 10: [83000], 1.9: [48000], 4.2: [63000]})\n"
-     ]
+     "data": {
+      "text/plain": [
+       "defaultdict(list,\n",
+       "            {8.7: [83000],\n",
+       "             8.1: [88000],\n",
+       "             0.7: [48000],\n",
+       "             6: [76000],\n",
+       "             6.5: [69000],\n",
+       "             7.5: [76000],\n",
+       "             2.5: [60000],\n",
+       "             10: [83000],\n",
+       "             1.9: [48000],\n",
+       "             4.2: [63000]})"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -325,20 +338,32 @@
     "for salario, exp in salarios_e_exps:\n",
     "    salario_por_exp[exp].append(salario)\n",
     "\n",
-    "print(salario_por_exp)"
+    "salario_por_exp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{8.7: 83000.0, 8.1: 88000.0, 0.7: 48000.0, 6: 76000.0, 6.5: 69000.0, 7.5: 76000.0, 2.5: 60000.0, 10: 83000.0, 1.9: 48000.0, 4.2: 63000.0}\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{8.7: 83000.0,\n",
+       " 8.1: 88000.0,\n",
+       " 0.7: 48000.0,\n",
+       " 6: 76000.0,\n",
+       " 6.5: 69000.0,\n",
+       " 7.5: 76000.0,\n",
+       " 2.5: 60000.0,\n",
+       " 10: 83000.0,\n",
+       " 1.9: 48000.0,\n",
+       " 4.2: 63000.0}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -349,7 +374,89 @@
     " for exp, salarios in salario_por_exp.items()\n",
     "\n",
     "}\n",
-    "print(media_salario_por_exp)\n"
+    "\n",
+    "media_salario_por_exp\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def exp_bucket (exp):\n",
+    "\n",
+    "    if exp <= 2:\n",
+    "\n",
+    "        return \"Menos que 2\"\n",
+    "\n",
+    "    elif exp <= 5:\n",
+    "\n",
+    "        return \"Entre 2 e 5\"\n",
+    "\n",
+    "    else:\n",
+    "        return \"Mais que 5\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(list,\n",
+       "            {'Mais que 5': [83000, 88000, 76000, 69000, 76000, 83000],\n",
+       "             'Menos que 2': [48000, 48000],\n",
+       "             'Entre 2 e 5': [60000, 63000]})"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "salario_por_exp_bucket = defaultdict(list)\n",
+    "\n",
+    "for salario, exp in salarios_e_exps:\n",
+    "\n",
+    " bucket = exp_bucket(exp)\n",
+    "\n",
+    " salario_por_exp_bucket[bucket].append(salario)\n",
+    "\n",
+    "salario_por_exp_bucket"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Mais que 5': 79166.66666666667,\n",
+       " 'Menos que 2': 48000.0,\n",
+       " 'Entre 2 e 5': 61500.0}"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "media_salario_por_bucket = {\n",
+    "\n",
+    " exp_bucket : sum(salarios) / len(salarios)\n",
+    "\n",
+    " for exp_bucket, salarios in salario_por_exp_bucket.items()\n",
+    "\n",
+    "}\n",
+    "\n",
+    "media_salario_por_bucket"
    ]
   }
  ],
